Fix link back to home

--- a/assignments.html
+++ b/assignments.html
@@ -12,7 +12,7 @@
 <body>
     <div class='container d-flex flex-column col-6  '>
         <div id="header justify-content-end">
-            <a href="index.html" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Back</a>
+            <a href="index.php" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Back</a>
         </div>
         
         <div id='my-name' class='align-self-center'>
